--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
 </head>
 <body>
    <!-- Header part Start -->
+   <header>
+      <nav>
+         <ul class="nav-items">
+            <li><a href="">Home</a></li>
+            <li><a href="">Clubs</a></li>
+            <li><a href="">World cup 2023</a></li>
+            <li><a href="">Upcoming Matches</a></li>
+            <li><a href="">Contact</a></li>
+         </ul>
+         <div class="login">
+            <button><i class="fas fa-sign-in-alt"></i><span>Login</span></button>
+         </div>
+      </nav>
+      <section class="header-section">
+         <div class="header-content">
+            <h1>Conmebol Copa America 2021</h1>
+            <button class="custom__btn">Watch Now <i class="fas fa-arrow-right"></i></button>
+         </div>
+         <div class="header-content-img">
+            <img src="images/banner.png" alt="">
+         </div>
+      </section>
+   </header>
    <!-- Header part end -->
 </body>
 </html>
