all players completed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <section class="header-section">
          <div class="header-content">
             <h1>Conmebol Copa America 2021</h1>
-            <button class="custom__btn">Watch Now <i class="fas fa-arrow-right"></i></button>
+            <button class="custom__btn"><span>Watch Now</span> <i class="fas fa-arrow-right"></i></button>
          </div>
          <div class="header-content-img">
             <img src="images/banner.png" alt="">
@@ -45,5 +45,122 @@
       </section>
    </header>
    <!-- Header part end -->
+
+   <main>
+      <div class="container">
+         <!-- Players Section start -->
+         <div class="players">
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-1.png" alt="">
+                  </div>
+                  <h1>Neymar Jr</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-2.png" alt="">
+                  </div>
+                  <h1>Lionel Messi</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-3.png" alt="">
+                  </div>
+                  <h1>Cristiano Ronaldo</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-4.png" alt="">
+                  </div>
+                  <h1>Paulo Dybala</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-5.png" alt="">
+                  </div>
+                  <h1>Mesut Ozil </h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-6.png" alt="">
+                  </div>
+                  <h1>Mauro Icardi </h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-7.png" alt="">
+                  </div>
+                  <h1>Neymar Jr</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-8.png" alt="">
+                  </div>
+                  <h1>Di Maria</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-9.png" alt="">
+                  </div>
+                  <h1>Kylian Mbappé</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-10.png" alt="">
+                  </div>
+                  <h1>Mohamed Salah</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-11.png" alt="">
+                  </div>
+                  <h1>Harry Kane</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+            <div class="player">
+               <div class="player-container">
+                  <div class="img-container">
+                     <img src="images/players/player-12.png" alt="">
+                  </div>
+                  <h1>Philippe Coutinho</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+               </div>
+            </div>
+         </div>
+         <!-- Players Section End -->
+      </div>
+   </main>
 </body>
 </html>
