completed without responsive

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    <main>
       <div class="container">
          <!-- Players Section start -->
-         <div class="players">
+         <section class="players">
             <div class="player">
                <div class="player-container">
                   <div class="img-container">
@@ -158,9 +158,23 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                </div>
             </div>
-         </div>
+         </section>
          <!-- Players Section End -->
       </div>
    </main>
+   <section class="logo-section">
+      <div class="logo-area">
+         <div class="logo-container">
+            <img src="images/Logo.png" alt="">
+         </div>
+         <div class="icon-contaier">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+         </div>
+         <p>Copyright © 2022 Football</p>
+      </div>
+   </section>
 </body>
 </html>
