web version completed

--- a/index.html
+++ b/index.html
@@ -162,6 +162,24 @@
          <!-- Players Section End -->
       </div>
    </main>
+
+   <!-- Highlights  section start  -->
+   <section class="highlights-section">
+      <div class="container">
+         <div class="highligts-container">
+            <div class="highlight-content">
+               <h2>All Highlights Copa America 2021</h2>
+               <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet</p>
+               <button class="custom__btn"><span>Watch Now</span> <i class="fas fa-arrow-right"></i></button>
+            </div>
+            <div class="highlight-img">
+               <img src="images/match.png" alt="">
+            </div>
+         </div>
+      </div>
+   </section>
+   <!-- Highlights  section end  -->
+
    <section class="logo-section">
       <div class="logo-area">
          <div class="logo-container">
