--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
    <!-- custom css -->
    <link rel="stylesheet" href="styles/style.css">
+   <link rel="stylesheet" href="styles/responsive.css">
 
 </head>
 <body>
@@ -30,6 +31,9 @@
             <li><a href="">Upcoming Matches</a></li>
             <li><a href="">Contact</a></li>
          </ul>
+         <div class="nav-icon">
+            <i class="fas fa-bars"></i>
+         </div>
          <div class="login">
             <button><i class="fas fa-sign-in-alt"></i><span>Login</span></button>
          </div>
