--- a/index.html
+++ b/index.html
@@ -184,6 +184,25 @@
    </section>
    <!-- Highlights  section end  -->
 
+   <!-- contace us for section start -->
+   <section class="contact-us">
+      <div class="container">
+         <fieldset>
+            <legend><h1>Contact us for Highlight Your Brand</h1></legend>
+            <form action="">
+               <input type="text" name="" id="" placeholder="First Name">
+               <input type="text" name="" id="Last Name" placeholder="Last Name">
+               <input type="email" name="" id="Email" placeholder="Email">
+               <input type="number" name="" id="Phone Number" placeholder="Phone Number">
+            </form>
+            <input class="adress" type="text" placeholder="Adress">
+            <textarea class="text-area" name="" id="" cols="125" rows="5" placeholder="Type your voice here"></textarea>
+            <input type="submit" value="Send Now" class="send-now">
+         </fieldset>
+      </div>
+   </section>
+   <!-- contact us for section end -->
+
    <section class="logo-section">
       <div class="logo-area">
          <div class="logo-container">
